--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
                         </select>
                     </td>
                     <td>
-                        <select id="compra-venta" class="short-long-select" oninput="calcularRoi()">
+                        <select id="compra-venta" class="short-long-select">
                             <option value="SHORT" id="short" class="short">SHORT</option>
                             <option value="LONG" id="long" class="long">LONG</option>
                         </select>
@@ -96,6 +96,8 @@
 
     
     
-    <script src="/javascript/table.js"></script>
+    <script src="/javascript/calculos.js"></script>
+    <script src="/javascript/select.js"></script>
+    <script src="/javascript/filas.js"></script>
 </body>
 </html>
